<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.sanploy</groupId>
	<artifactId>CardRelease</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>CardRelease Maven Webapp</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<org.apache.tomcat.maven.version>2.2</org.apache.tomcat.maven.version>
		<spring.version>4.1.6.RELEASE</spring.version>
		<jackson.version>2.5.4</jackson.version>
		<mysql.version>5.1.35</mysql.version>
		<druid.version>1.0.15</druid.version>
		<hibernate.version>4.3.10.Final</hibernate.version>
		<hibernate.validator.version>5.1.3.Final</hibernate.validator.version>
		<org.slf4j.version>1.7.12</org.slf4j.version>
		<logback.version>1.1.3</logback.version>
		<jasperreport.version>6.1.0</jasperreport.version>
	</properties>

	<dependencies>
		<!-- 加入：Servlet开始 -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>3.0-alpha-1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.el</groupId>
			<artifactId>javax.el-api</artifactId>
			<version>2.2.5</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>
		<!-- 加入：Servlet结束 -->
		<!-- 加入spring-mvc开始 -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<!-- 加入spring-mvc结束 -->
		<!-- 加入jackson包；springmvc对json的支持开始 -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<!-- 加入jackson包；springmvc对json的支持结束 -->
		<!-- 加入spring需要的其他包开始 -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
	        <groupId>org.springframework</groupId>
	        <artifactId>spring-context-support</artifactId>
	        <version>${spring.version}</version>
	    </dependency>
		<!-- 加入spring需要的其他包结束 -->
		<!-- 加入DB驱动包开始 -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>${mysql.version}</version>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>druid</artifactId>
			<version>${druid.version}</version>
		</dependency>
		<!-- 加入DB驱动包结束 -->
		<!-- 加入hibernate开始 -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${hibernate.version}</version>
		</dependency>
		<!-- 加入hibernate结束 -->
		<!-- 加入hiebernate Tools作为实体的校验开始 -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>${hibernate.validator.version}</version>
		</dependency>
		<!-- 加入hiebernate Tools作为实体的校验结束 -->
		<!-- 加入日志记录开始 -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${org.slf4j.version}</version>
		</dependency>
		<!-- 加入日志记录结束 -->
		<!-- 加入jasperreport报表引擎开始 -->
		<dependency>
			<groupId>net.sf.jasperreports</groupId>
			<artifactId>jasperreports</artifactId>
			<version>${jasperreport.version}</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy-all</artifactId>
			<version>2.4.3</version>
		</dependency>
		<!-- 加入jasperreport报表引擎结束 -->
		<!-- 导出报表的支持 -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>3.12</version>
		</dependency>
		<!-- 报表中中文的支持 -->
		<dependency>
			<groupId>com.lowagie</groupId>
			<artifactId>iTextAsian</artifactId>
			<version>2.1.7</version>
		</dependency>
		<!-- linux下的字体 -->
		<dependency>
			<groupId>com.lowagie</groupId>
			<artifactId>itext</artifactId>
			<version>2.1.7</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- compiler插件, 设定JDK版本 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<encoding>UTF-8</encoding>
					<showWarnings>true</showWarnings>
				</configuration>
			</plugin>
			<!-- maven测试时使用jetty服务器，每隔1秒检查，若有刷新自动更新 -->
			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>9.1.5.v20140505</version>
				<configuration>
					<scanIntervalSeconds>1</scanIntervalSeconds>
					<webApp>
						<contextPath>/CardRelease</contextPath>
					</webApp>
					<jvmArgs>
						-XX:PermSize=512 -XX:MaxPersize=1024M
					</jvmArgs>
				</configuration>
			</plugin>

			<!-- 方便部署，使用tomcat插件； -->
			<plugin>
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<version>${org.apache.tomcat.maven.version}</version>
				<configuration>
					<url>http://localhost:8080/manager/text</url>
					<server>tomcat</server>
					<path>/CardRelease</path>
				</configuration>
			</plugin>
		</plugins>
		<finalName>CardRelease</finalName>
	</build>
</project>
